--- a/CDA3103/MySPIM/tests/Makefile
+++ b/CDA3103/MySPIM/tests/Makefile
@@ -1,16 +1,14 @@
 CC = gcc
 CFLAGS = -g -O2 -Wall
 OBJECTS = tests.o
-PROGRAM = test
+PROGRAM = ../bin/test
 
 test : $(OBJECTS)
-	$(CC) $(CFLAGS) $(OBJECTS) -o $(PROGRAM)
+	$(CC) $(CFLAGS) $(OBJECTS) -o ../bin/$(PROGRAM)
+	rm *.o
 
 %.o : %.c
 	$(CC) $(CFLAGS) -c $<
-
-clean :
-	rm *.o $(PROGRAM)
 
 run :
 	./$(PROGRAM)
