Add output path as argument to program

--- a/COP3402/PM0/src/Makefile
+++ b/COP3402/PM0/src/Makefile
@@ -3,6 +3,7 @@ CFLAGS = -g -O2 -Wall
 OBJECTS = stack.o pm0.o
 PROGRAM = ../bin/stack
 INPUT = ../input/mcode.txt
+OUTPUT = ../output/mcode-stacktrace.txt
 
 stack : $(OBJECTS)
 	$(CC) $(CFLAGS) $(OBJECTS) -o $(PROGRAM)
@@ -15,4 +16,4 @@ clean :
 	rm *.o
 
 run :
-	$(PROGRAM) $(INPUT)
+	$(PROGRAM) $(INPUT) $(OUTPUT)
