Update readme, run script and src/Makefile for better execution

--- a/COP3402/PM0/src/Makefile
+++ b/COP3402/PM0/src/Makefile
@@ -3,18 +3,18 @@ CFLAGS = -g -O2 -Wall
 OBJECTS = stack.o pm0.o
 PROGRAM = ../bin/stack
 INPUT = ../input/mcode.txt
-OUTPUT = ../output/mcode-stacktrace.txt
+OUTPUT = ../output/stacktrace.txt
 
 stack : $(OBJECTS)
-	$(CC) $(CFLAGS) $(OBJECTS) -o $(PROGRAM)
+	@$(CC) $(CFLAGS) $(OBJECTS) -o $(PROGRAM)
 
 %.o : %.c
-	$(CC) $(CFLAGS) -c $<
+	@$(CC) $(CFLAGS) -c $<
 
 clean :
-	rm $(OBJECTS)
-	rm $(OUTPUT)
-	rm $(PROGRAM)
+	@rm $(OBJECTS)
+	@rm $(OUTPUT)
+	@rm $(PROGRAM)
 
 run :
-	$(PROGRAM) $(INPUT) $(OUTPUT)
+	@$(PROGRAM) $(INPUT) $(OUTPUT)
